new proj/src/objects/Contract_Summary__c.object
<CustomObject>
    <fields>
        <fullName>Contract_Currency__c</fullName>
        <inlineHelpText>If the agreement is silent, it is N/A</inlineHelpText>
        <label>Contract Currency *</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>GE_Appli_Deliv_Terms__c</fullName>
        <description>DEPENDENT FIELD from &quot;Frame Agreement Applicable Products /Services&quot; when the values selected is &quot;Products&quot;; LOV: [EXW; FAS (sea and inland water); FOB (sea and inland water); FCA; FCA loaded; CFR (sea and inland water); CIF (sea and inland water); CPT; CIP; DAT; DAP; DDP]</description>
        <label>Applicable Delivery Terms</label>
        <picklist>
            <picklistValues>
                <fullName>EXW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FAS (sea and inland water)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FOB (sea and inland water)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FCA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FCA loaded</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CFR (sea and inland water)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CIF (sea and inland water)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CPT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CIP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DAT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DAP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DDP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>GE_Are_Cust_Taxe_defin__c</fullName>
        <label>Are Customer Taxes defined?*</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_Are_FX_Fluct_provision__c</fullName>
        <inlineHelpText>If the agreement is silent, it is N/A</inlineHelpText>
        <label>Are there FX Fluctuation provisions?*</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_Are_Seller_Taxes_defined__c</fullName>
        <label>Are Seller Taxes defined?*</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_Are_e_invoice_allowed__c</fullName>
        <label>Are e-invoice allowed?*</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_Are_there_carve_to_the_LOL1__c</fullName>
        <inlineHelpText>Are there any carve outs to the Limitation of Liability?</inlineHelpText>
        <label>Are there any carve outs to the LOL?</label>
        <picklist>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>indemnities</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>taxes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>warranty</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>confidentiality</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Liquidated Damages</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>beach of applicable law</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>insurance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>others</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>GE_Are_there_carve_to_the_LOL__c</fullName>
        <inlineHelpText>Are there any carve outs to the Limitation of Liability?</inlineHelpText>
        <label>Are there any carve outs to the LOL</label>
        <picklist>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>indemnities</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>taxes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>warranty</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>confidentiality</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Liquidated Damages</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>beach of applicable law</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>insurance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>others</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_CATAS_LOSS_OF_WELL__c</fullName>
        <description>DEPENDENT FIELD from &quot;Tier 2 P&amp;L&quot; when the value selected is &quot;SS and/or D&amp;S&quot;</description>
        <inlineHelpText>Is there  CATASTROPHIC LOSS OF WELL Indemnification (Indemnity by CUSTOMER for catastrophic loss of well even if caused by GE&apos;s negligence). If GE liable for catastrophic loss state &quot;No&quot;. If the agreement is silent, it is No</inlineHelpText>
        <label>CATASTROPHIC LOSS OF WELL indemnity</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_Can_sche_and_fees__c</fullName>
        <description>DEPENDENT FIELD from &quot;Customer has the right to terminate for convenience?&quot; when the value selected is &quot;Yes&quot;</description>
        <inlineHelpText>If Customer has the right to terminate for convenience, is there a cancellation schedule and fees? Are there demobilization compensation?</inlineHelpText>
        <label>Cancellation schedule and fees</label>
        <picklist>
            <picklistValues>
                <fullName>cancellation schedule</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>cancellation fees</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>demobilization compensation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>GE_Char_of_ship_storage__c</fullName>
        <description>DEPENDENT FIELD from &quot;Frame Agreement Applicable Products /Services&quot; when the values selected is &quot;Products&quot;</description>
        <inlineHelpText>In case GE storages goods that can&apos;t be delivered to Customer for reasons not attributable to GE:
1) shall GE be reimbursed for all storage expenses incurred including applicable taxes?  
2) Shall GE be entitled to issue the invoice?</inlineHelpText>
        <label>Characteristics of shipment to storage</label>
        <picklist>
            <picklistValues>
                <fullName>GE reimbursed for storage expenses &amp; tax</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GE is entitled to issue the invoice</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nothing of the above</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>GE_Comm_on_Indem_Stru__c</fullName>
        <inlineHelpText>Comments on Indemnity Structure (Detail any other unique indemnity provisions/obligations)</inlineHelpText>
        <label>Comments on Indemnity Structure*</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>GE_Conse_Damages_exclu__c</fullName>
        <description>DEPENDENT FIELD from &quot;Exclusion of Consequential Damages (including loss profits &amp; loss of revenue)?&quot; when the value selected is &quot;Yes&quot;</description>
        <inlineHelpText>Does the exclusion of consequential damages clause expressly state that &quot;loss of revenue&quot; or &quot;loss of profits&quot; are excluded consequential damages?</inlineHelpText>
        <label>Consequential Damages&apos; exclusions</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_Contract_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contract Name</label>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>Contract Summary</relationshipLabel>
        <relationshipName>Contract_Summary</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GE_Conty_specific_tax_duties_clau__c</fullName>
        <inlineHelpText>Are there Country-specific taxes and duties clauses or T&amp;C&apos;s depending on GE or Buyer Affiliates or Country of execution? 
Is there for GE flexibility to add any specific tax T&amp;C&apos;s (e.g., Russian Federation, Algeria)?</inlineHelpText>
        <label>Country-specific taxes &amp; duties clauses*</label>
        <picklist>
            <picklistValues>
                <fullName>Country-specific tax &amp; duties</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>T&amp;C depending on GE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>T&amp;C depending on Buyer Affiliates</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>T&amp;C depending on Country of execution</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GE flexibility to add specific tax T&amp;C</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contract Silent</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>GE_Cust_issue_order_vari__c</fullName>
        <inlineHelpText>Can Customer issue order variations without previous agreement on price and schedule? If the agreement is silent, it is N/A</inlineHelpText>
        <label>Customer issues order variations w/o GE*</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_Cust_obli_to_apply_GE_exemp__c</fullName>
        <inlineHelpText>Is Customer obliged to apply GE exemptions if and when applicable?</inlineHelpText>
        <label>Customer obliged to apply GE exemptions*</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_Cust_provide_export_certif__c</fullName>
        <inlineHelpText>Is Customer required to provide a proof of export certificate?</inlineHelpText>
        <label>Customer provide export certificate*</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_Cust_shall_provide_WHT_certifi__c</fullName>
        <inlineHelpText>Is Customer obliged to provide WHT certificates within a certain deadline?</inlineHelpText>
        <label>Customer shall provide WHT certificates*</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_Cust_shall_provide_its_exempt__c</fullName>
        <inlineHelpText>Is Customer obliged to provide a proof of its import or VAT or other exemptions?</inlineHelpText>
        <label>Customer shall provide its exemptions*</label>
        <picklist>
            <picklistValues>
                <fullName>Proof of customer&apos;s import</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Proof of VAT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exemptions proof</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nothing</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>GE_Cust_suspnd_for_conv__c</fullName>
        <inlineHelpText>Can Customer suspend the contract for convenience?</inlineHelpText>
        <label>Customer&apos;s suspend for convenience*</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_Cust_term_for_conven__c</fullName>
        <inlineHelpText>Customer has the right to terminate for convenience?</inlineHelpText>
        <label>Customer termination for convenience*</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_Deli_confirm_upon_Cust_accep__c</fullName>
        <description>DEPENDENT FIELD from &quot;Frame Agreement Applicable Products /Services&quot; when the values selected is &quot;Products&quot;</description>
        <inlineHelpText>Is Customer acceptance a condition for Delivery confirmation? E.g the title transfer is subject to items  Acceptance from Customer and/or Items have to be checked and accepted by Customer.</inlineHelpText>
        <label>Delivery confirmed upon Cust. acceptance</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_Desc_the_Assign_clause_istd__c</fullName>
        <description>DEPENDENT FIELD from &quot;Is the Assignment Clause within the GE standard?&quot; when the values selected is &quot;No&quot;</description>
        <inlineHelpText>If Assignment Clause is not standard. Is GE allowed to assign Receivables without Buyer&apos;s consent?</inlineHelpText>
        <label>Describe the Assignment clause if no std</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>GE_Desc_title_trfr_loss__c</fullName>
        <description>DEPENDENT FIELD from &quot;Are the Title Transfer and Risk of Loss aligned with Incoterm Delivery Terms as per GE Standard?&quot; when the value selected is &quot;No&quot;</description>
        <inlineHelpText>Description, if title transfer and risk of loss is not as per GE standard. Specify when Title and risk of loss to products shall pass to Customer.</inlineHelpText>
        <label>Describe title transfer and risk of loss</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>GE_Describe_no_std_Tax_Clause__c</fullName>
        <inlineHelpText>Description if Tax Clause is not Standard</inlineHelpText>
        <label>Describe no-std Tax Clause</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>GE_Detail_Frm_indx_Floor_Cap__c</fullName>
        <inlineHelpText>If Escalation mechanism is based on variable (based on indexes) or mixed, please detail the Escalation Formula and the related applied Indexes or the fixed annual adjustment and Floor/Cap if any.</inlineHelpText>
        <label>Detail Formula, indexes and Floor/Cap</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>GE_Finance_Pricing_Currency__c</fullName>
        <label>Currency</label>
        <picklist>
            <picklistValues>
                <fullName>AED - UAE Dirham</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ALL - Albanian Lek</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ARS - Argentine Peso</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AUD - Australian Dollar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BDT - Bangladesh Taka</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BRL - Brazilian Real</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CAD - Canadian Dollar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CHF - Swiss Franc</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CLP - Chilean Peso</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CNY - Chinese Yuan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>COP - Colombian Peso</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CZK - Czech Koruna</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DKK - Danish Krone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DZD - Algerian Dinar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EGP - Egyptian Pound</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EUR - Euro</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GBP - British Pound</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HKD - Hong Kong Dollar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HUF - Hungarian Forint</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IDR - Indonesian Rupiah</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ILS - Israeli Shekel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>INR - Indian Rupee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IQD - Iraqi Dinar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IRR - Iranian Rial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ISK - Iceland Krona</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>JPY - Japanese Yen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KRW - Korean Won</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KWD - Kuwaiti Dinar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MAD - Moroccan Dirham</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MNT - Mongolian Tugrik</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>GE_Hazard_Waste_disp_respon__c</fullName>
        <inlineHelpText>If the agreement is silent, it is N/A</inlineHelpText>
        <label>Hazardous Waste disposal responsibility*</label>
        <picklist>
            <picklistValues>
                <fullName>Company</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_How_the_discount_is_applied__c</fullName>
        <label>How the discount is applied?</label>
        <picklist>
            <picklistValues>
                <fullName>Directly on the order</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yearly by voucher/credit note/change order</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yearly by next year applicable discount percentage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>At corporate/headquarter level</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Others</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_IP_Own_provision_non_std__c</fullName>
        <inlineHelpText>Are the IP Ownership provisions non-standard (i.e. does GE give up ownership of GE developed IP)? If the agreement is silent, it is No</inlineHelpText>
        <label>IP Ownership provisions non-standard*</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_IS_GE_std_Tax_clause_includ__c</fullName>
        <inlineHelpText>Is GE standard Tax clause included in the offer? Standard tax clause at the following link: http://libraries.ge.com/foldersIndex.do?entity_id=11029335101&amp;sid=101&amp;SF=1</inlineHelpText>
        <label>IS GE std Tax clause included?*</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_IT_pnt_of_deliy_and_rea__c</fullName>
        <description>DEPENDENT FIELD from &quot;Frame Agreement Applicable Products /Services&quot; when the values selected is &quot;Products&quot;</description>
        <inlineHelpText>Specify INCOTERM point/s of delivery and the reason for Multiple delivery terms (if any)</inlineHelpText>
        <label>INCOTERM point/s of delivery and reasons</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>GE_If_Othrs_spcify_incen_Dis__c</fullName>
        <inlineHelpText>If Others, please specify the incentives/Discounts included</inlineHelpText>
        <label>If Others, specify incentives/Discounts</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>GE_If_Othrs_specify_Prod_Ser__c</fullName>
        <inlineHelpText>If Others, specify which Products/Services are quoted.</inlineHelpText>
        <label>If Others, specify Products/Services</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>GE_If_detail_Esc_mech__c</fullName>
        <inlineHelpText>If yes, which is the Escalation mechanism: fixed rate, variable based on indexes or mixed?</inlineHelpText>
        <label>If yes, detail Escalation mechanism</label>
        <picklist>
            <picklistValues>
                <fullName>Fixed Rate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Variable based on indexes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mixed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_If_detail_quot_Prod_Serv__c</fullName>
        <inlineHelpText>Prices will be renegotiated on yearly basis and communicated to customer through a letter.</inlineHelpText>
        <label>If Yes, detail quoted Products/Services</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>GE_If_vari_mini_floor_applic__c</fullName>
        <inlineHelpText>If Escalation mechanism is based on variable (based on indexes) or mixed, which is the minimum floor percentage applicable?</inlineHelpText>
        <label>If variable, minimum floor % applicable</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>GE_Incen_Disc_are_includ__c</fullName>
        <inlineHelpText>Are incentives /Discounts included in the contract? If the agreement is silent, it is No.</inlineHelpText>
        <label>Incentives /Discounts are included</label>
        <picklist>
            <picklistValues>
                <fullName>No Discount</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Base discount</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Volume discount</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Others</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>GE_Indtion_3rd_Party_Use__c</fullName>
        <description>DEPENDENT FIELD from &quot;Tier 2 P&amp;L&quot; when the value selected is &quot;PII&quot;</description>
        <inlineHelpText>(only for PII)</inlineHelpText>
        <label>Indemnification for 3rd Party Use</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>GE_Indty_Stru_Peop_Prop__c</fullName>
        <label>Indemnity Structure for People/Property*</label>
        <picklist>
            <picklistValues>
                <fullName>Regardless fault indemnity GE personnel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Regardless fault indemnity GE property</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Negli indemnity third party prop &amp; pers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Negli indemnity customer prop &amp; pers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>silent</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>GE_Insu_Buyer_as_Add_Insured__c</fullName>
        <inlineHelpText>Insurance - Is GE required to name CUSTOMER as Additional Insured? If the agreement is silent, it is No</inlineHelpText>
        <label>Insurance: Buyer as Additional Insured</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_Insu_Waiver_of_Sub__c</fullName>
        <inlineHelpText>Insurance - Is GE required to provide the CUSTOMER with a Waiver of Subrogation? If the agreement is silent, it is No</inlineHelpText>
        <label>Insurance: Waiver of Subrogation</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_Invoic_proced__c</fullName>
        <label>Invoicing procedures*</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>GE_Is_GE_entitled_to_reject_orders__c</fullName>
        <inlineHelpText>Is GE entitled to reject orders under the agreement? If the agreement is silent, it is N/A</inlineHelpText>
        <label>Is GE entitled to reject orders?*</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_Is_GE_right_Subcon_std__c</fullName>
        <description>DEPENDENT FIELD from &quot;Is the Subcontract Clause within the GE standard?&quot; when the values selected is &quot;No&quot;</description>
        <label>Is GE right to Subcontract std?</label>
        <picklist>
            <controllingField>GE_Is_the_Subcon_Clase_std__c</controllingField>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_Is_subject_to_perfrm_Guar__c</fullName>
        <inlineHelpText>Is GE subject to any performance Guarantee? If Yes, please specify the type/s. Details of performance Guarantee are detailed in the below link. Performance Guarantee Training.</inlineHelpText>
        <label>Is GE subject to performance Guarantee?*</label>
        <picklist>
            <picklistValues>
                <fullName>advance payment bond</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>performance bond</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>warranty bond</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>parent company guarantee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>surety bond</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>bid bond</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>rentention money bond</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>GE_Is_the_Assig_Clau_std__c</fullName>
        <inlineHelpText>Std: Assignment of rights and obligations by GE without Buyer’s consent and upon written notice to Buyer. Void any assignement by Buyer without GE’s prior written consent. Receivables: assignement by GE to third parties prior written notice to Buyer</inlineHelpText>
        <label>Is the Assignment Clause std?*</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_Is_the_Subcon_Clase_std__c</fullName>
        <inlineHelpText>Has GE the right to Subcontract without Buyer consent as per std (with or without pre-approved GE Legal Entities)?</inlineHelpText>
        <label>Is the Subcontract Clause std?*</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
</CustomObject>